+ elementos de html e css

--- a/aula-30-10/index.html
+++ b/aula-30-10/index.html
@@ -7,7 +7,7 @@
     <title>Aula dia 30-10</title>
 </head>
 <body>
-    
+    <h1>Aula de programação</h1>
     <p>primeiro parágrafo</p>
     <p id="p1">primeiro parágrafo</p>
     <p>primeiro parágrafo</p>
@@ -21,5 +21,42 @@
     <div id="d1">
         exemplo de uso de borda
     </div>
+
+    <table>
+        <tr>
+            <th>nome</th>
+            <th>endereco</th>
+            <th>cidade</th>
+            <th>estado</th>
+            <th>bairro</th>
+        </tr>
+
+        <tr>
+            <td>Marília</td>
+            <td>Rua ceraima</td>
+            <td>Matina</td>
+            <td>BA</td>
+            <td>Centro</td>
+        </tr>
+
+        <tr>
+            <td>Lara</td>
+            <td>Rua dajuda</td>
+            <td>Ibiassuce</td>
+            <td>RS</td>
+            <td>Brasilian</td>
+        </tr>
+
+        <tr>
+            <td>Mary</td>
+            <td>Rua 7</td>
+            <td>Cacule</td>
+            <td>MG</td>
+            <td>Jorge amado</td>
+        </tr>
+
+    </table>
+
+    <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.metropoles.com%2Fcolunas%2Fjuris%2Fa-politica-de-cuidados-para-a-garantia-dos-direitos-das-mulheres&psig=AOvVaw09q0wpTAxpwFefOoxNfhMS&ust=1730404389298000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCNjkz-nwtokDFQAAAAAdAAAAABAE">tumalaka></a>
 </body>
 </html>
